header section small correct with height parametr

--- a/src/components/Home/HomeHeader/style.scss
+++ b/src/components/Home/HomeHeader/style.scss
@@ -5,13 +5,13 @@ ul {
 }
 
 ul>li {
-    padding-bottom: 1.5rem;
-    padding: 1rem 1.5rem;
-    // text-align: center;
+  padding-bottom: 1.5rem;
+  padding: 1rem 1.5rem;
+  // text-align: center;
 }
 
 .homeHeaderWrapper {
-  height: 70vh;
+  height: 100vh;
   display: flex;
   justify-content: flex-end;
   background-image: url(../../../assets/Home-Hero-Image.jpg);
@@ -20,14 +20,14 @@ ul>li {
 }
 
 .homeHeaderWrapper .topMenuPanel {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .topMenuPanelWord {
-    font-size: 2.5rem;
+  font-size: 2.5rem;
 }
 
 .homeHeaderWrapper h1:nth-of-type(1) {
